# nfe

./: Cargo.toml  NFe.xml  README.md
src/: main.rs
xmls/: NFe1.xml
