[package]
name = "nfe"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
quick-xml = "0.37.3"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
walkdir = "2.5.0"
